# tauri-calculator

./: LICENSE.md
.github/workflows/: android_build.yml  build-android.yml  build.yml
src/: index.html  main.js  script.js  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
