[package]
name = "equation-calculator"
version = "0.3.0"
description = "Calculator for quadratic equations"
authors = ["Vitaliy Pavlov"]
edition = "2021"
license = "MIT"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
